--- a/styles/components/Topbar.css
+++ b/styles/components/Topbar.css
@@ -1,72 +1,186 @@
-/* Grid */
-
-.TopBarContainer {
-    display: flex;
-    justify-content: center;
-
-    grid-column-start: 1;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 2;
-}
-
-/* styles */
-
+/* Mobile */
 .TopBarContainer {
     width: 100%;
-    height: 60px;
-    border-bottom: solid 3px #000 ;
+    height: 4rem;
+  
+    background: var(--primary-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-
 .Topbar {
     width: 100%;
-    height: 60px;
-
+    height: 70px;
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    
 }
-
 .Topbar a {
     font: 'Inter' sans-serif;
-    font-weight: 700;
-    font-size: 24px;
-    color: #FFFFFF;
-
-    text-decoration: none;
-    
+    font-weight: bold;
+    font-size: 1rem;
+    color: var(--text-color);
+    text-decoration: none;  
 }
-
-.TopBarContainer img {
-    width: 60px;
-    height: 60px;
+.Topbar a:hover {
+    opacity: 0.7;
+}
+.buttonContainer { 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    width: 3rem;
+    margin-right: 10px;
+}
+.names {   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90%;
+    margin-left: 0.4rem;
+    margin-right: 0.4rem;
+    border-bottom: 3px solid transparent; 
+}
+.GitContainer{
+    width: 3rem;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10px;
+}
+label {
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 100px;
+    background-color: #000000;
+    background-image: linear-gradient(315deg, #000000 0%, #7f8c8d 74%);
+    cursor: pointer;
+    float: right;
+    position: relative;
+}
+input[type=checkbox]{
+    height: 0;
+    width: 0;
+    visibility: hidden 
+}
+.NightIcon {
+    position: absolute;
+    top: 0.4rem;
+    right: 0.2rem;
+    height: 0.7rem;
+    transition: 0.3s;
+}
+.DayICon {
+    position: absolute;
+    top: 0.4rem;
+    left: 0.1rem;
+    height: 0.7rem;
+    transition: 0.3s;
+    opacity: 0;
+}
+.IconGit{
+    width: 2rem;
+    height: 2rem;
     align-self: center;
 }
-
-.nameHome {
-    height: 100%;
-
-
-    display: flex;
-    justify-content: center;
-    align-items: center; 
+input:checked + label {
+    background-color: #000000;
+    background-image: linear-gradient(315deg, #000000 0%, #7f8c8d 74%);
 }
 
-.nameProjetos {   
-    height: 100%;
-
-    margin-left: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center; 
+input:checked + label::after {
+    left: calc(100% - 5px);
+    transform: translateX(-100%);
+}
+input:checked + label .NightIcon {
+    opacity: 0;
+}
+input:checked + label .DayICon {
+    opacity: 1;
+}
+label:active:after {
+    width: 45px;
 }
 
-.nameContato {   
-    height: 100%;
-    margin-left: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-}
 
+/* Desktop */
+@media (min-width: 768px) {
+    .TopBarContainer {      
+        grid-column-start: 1;
+        grid-column-end: 4;
+        grid-row-start: 1;
+        grid-row-end: 2; 
+        width: 100%;
+        height: 4rem;
+    }   
+    .buttonContainer { 
+        grid-column-start: 3;
+        grid-column-end: 4;
+        grid-row-start: 1;
+        grid-row-end: 2;
+        width: 80px;
+        margin-right: 10px;
+    }
+    .Topbar {
+        width: 100%;
+        height: 70px;
+    } 
+    .Topbar a {
+        font-size: 24px;
+    }
+    .GitContainer{
+        width: 5rem;
+    }
+    .IconGit{
+        width: 3.75rem;
+        height: 3.75rem;
+    }
+    .names {   
+        margin-left: 1.25rem;
+        margin-right: 20px;    
+    }
+    input[type=checkbox]{
+        height: 0;
+        width: 0;
+        visibility: hidden
+    }
+    .toggle {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    label {
+        width: 3.9rem;
+        height: 1.8rem;
+        border-radius: 6.25rem;
+    }
+    label::after {
+        content: '';
+        position: absolute;
+        top: 0.3rem;
+        left: 0.25rem;
+        width: 1.25rem;
+        height: 1.25rem;
+        background: #ffff;
+        border-radius: 5.6rem;
+        transition: 0.3s;
+    }
+    .NightIcon {
+        position: absolute;
+        top: 0.4rem;
+        right: 0.25rem;
+        height: 1rem;
+        transition: 0.3s;
+    }
+    .DayICon {
+        position: absolute;
+        top: 0.4rem;
+        left: 0.25rem;
+        height: 1rem;
+        transition: 0.3s;
+        opacity: 0;
+    }
+    
+}
