--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,22 +1,16 @@
-.Content {
-  width: 100vw;
-  height: 100vh;
+
+
+.intro {
+  width: 50vw;
+  height: auto;
+  margin: auto;
+  border-radius: 10px;
   display: flex;
-  align-items: center;
   flex-direction: column;
+  background-color: var(--primary-color);
 }
 
-/*Box Intro*/
-.intro {
-  width: 40vw;
-  height: 25rem;
-  border-radius: 10px;
-  background-color: var(--primary-color);
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
+/*Box Content*/
 
 .bar {
   width: 100%;
@@ -54,95 +48,43 @@
   opacity: 0.4;
 }
 
-/*Box Intro*/
-.intro {
-  width: 40vw;
-  height: 25rem;
-  border-radius: 10px;
-  background-color: var(--primary-color);
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.Picture {
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
 }
 
-.bar {
-  width: 100%;
-  height: 1.87rem;
-  background-color: var(--secondary-color);
-  border-radius: 10px 10px 0px 0px;
-  animation: aparecer 2s normal;
+.TitleContainer {
   display: flex;
-  flex-direction: row;
+  justify-content:stretch;
   align-items: center;
-}
-.bar div {
-  width: 1rem;
-  height: 1rem;
-  border-radius: 50%;
-  margin: 0.4rem;
-  animation: aparecer 2s normal;
-}
-.bar div:first-child {
-  background-color: #42378f;
-  background-image: linear-gradient(315deg, #42378f 0%, #f53844 74%);
-  animation: aparecer 2s normal
-}
-.bar >div {
-  background-color: #fbb034;
-  background-image: linear-gradient(315deg, #fbb034 0%, #ffdd00 74%); 
-  animation: aparecer 2s normal
-}
-.bar div:last-child {
-  background-color: #00b712; 
-  background-image: linear-gradient(315deg, #00b712 0%, #5aff15 74%); 
-  animation: aparecer 2s normal
-}
-.bar div:hover {
-  opacity: 0.4;
 }
 
 .TextContainer {
-  width: auto;
-  height: auto;
-  margin-top: auto;
-  margin-bottom: auto;
-  padding: 2rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 3rem 1rem;
 }
 
-.TextContainer h1 {
-  font-size: 1.7rem;
+.TitleContainer h1 {
+  font-size: 2.2rem;
   font-weight: 800;
+  padding-left: 3rem;
   color: var(--text-primary);
 }
 
 .TextContainer p {
   font-size: 1.1rem;
   font-weight: 600;
-  margin-left: 1rem;
+  margin-top: 2rem;
   line-height: 1.5;
   color: var(--text-secondary);
   animation: aparecer 2s normal;
 }
 
-.Links {
-  padding: 1rem;
-}
-
-.Links a {
-  font-size: 1.1rem;
-  font-weight: 800;
-  color: var(--text-primary);
-  text-decoration: none;
-  padding: 1rem;
-}
-
-.TextContainer a{
-  color: var(--text-primary);
-  text-decoration: none;
-}
-
 /*Social*/
+
 .socialContainer {
   width: 100%;
   height: auto;
@@ -150,15 +92,44 @@
 
 .social {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 2rem;
-}
-
-.Picture img {
-  width: 3rem;
-  height: 3rem;
-  border-radius: 50%;
+  justify-content: center;
+  flex-direction: row;
+  padding: 2rem 1rem;
 }
 
 
+.Links a {
+  font-size: 1.4rem;
+  font-weight: 800;
+  color: var(--text-primary);
+  text-decoration: none;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.TextContainer a{
+  color: var(--text-primary);
+  text-decoration: none;
+}
+
+
+@media screen and (max-width: 1024px) {
+  
+  .TextContainer p {
+    font-size: 1rem;
+  }
+  .TitleContainer h1 {
+    font-size: 1.5rem;
+  }
+  .Links a {
+    font-size: 1rem;
+    padding: 0.3rem
+  }
+}
+@media screen and (max-width: 500px) {
+  .intro {
+    width: 90vw;
+    height: auto;
+    margin: auto;
+  }
+}
