--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,9 +7,17 @@
 }
 
 body {
+    width: 100vw;
+    height: 100vh;
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
     font-family: 'Inter', sans-serif;
     border: 0;
     margin: 0;
+    padding: 0;
     background: var(--background);
 }
 
@@ -21,3 +29,5 @@ body::-webkit-scrollbar-thumb {
     background: var(--secondary-color);
     border-radius: 5px;
 }
+
+
